# Video-Notes

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml  spec-manifest.yaml
.slim/deepwork/gate0/: import_graph.json  module_inventory.json  rpc_contract.md  sample_data_manifest.json  test_baseline.json  ui_feature_matrix.md
.superpowers/sdd/: progress.md
conformance/quality/v0.1/: baseline-report.json  benchmark-manifest.json  semantic-manifest.json  semantic-report.json
conformance/v0.2/: latest-report.json
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.svelte  main.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/nsis/: cleanup-appdata.nsh
desktop/src-tauri/src/: engine_manager.rs  lib.rs  main.rs  native_engine.rs  process_tree.rs  protocol.rs  startup_diagnostics.rs
desktop/src-tauri/src/compile/: bridge.rs  calibrate.rs  client.rs  draft.rs  engine.rs  mod.rs  prompt.rs  renderer.rs  repair.rs  sampler.rs  storage.rs  vision.rs
desktop/src-tauri/src/compile_v3/: canonical.rs  convert.rs  ir.rs  mod.rs  storage.rs  trust.rs  validate.rs
desktop/src-tauri/src/native_engine/: mod.rs  tests.rs
desktop/src-tauri/src/study/: knowledge.rs  mod.rs  quiz.rs
desktop/src-tauri/src/study/knowledge/: entity.rs  graph.rs  mod.rs  parser.rs  prompt.rs  relation.rs  source.rs  validator.rs
desktop/src-tauri/src/study/knowledge/adapters/: mod.rs  tree_adapter.rs
desktop/src-tauri/tests/: compiler_v3_conformance.rs  conformance_runner.rs
desktop/src/lib/: whisperModels.ts
docs/: Change-Manifest-v4.md  Collection-Database-Hotfix-v1.2.7.md  Compile-Hotfix-v1.2.2.md  Engine-Cwd-Hotfix-v1.2.5.md  Event-Transport-Hotfix-v1.2.6.md  FOUNDATION-STATUS-v0.2.0-rc.3.md  Hotfix-v4.1.md  Hotfix-v4.2.2.md  Installer-Hotfix-v1.2.4.md  Model-Interaction-Hotfix-v1.5.0.md  Multimodal-Video-Understanding-PRD.md  Product-Architecture-v4.md  Startup-Hotfix-v1.2.1.md  UI-Architecture-v5.md  UI-Architecture-v6.md  UI-Architecture-v7.md  UI-v5-Change-Manifest.md  UI-v6-Change-Manifest.md  UI-v7-CUDA-Storage-Notebook-Hotfix.md  UI-v7-Change-Manifest.md  UI-v7-Online-Video-Hotfix.md  UI-v7-Real-Task-Interaction-Fix.md  Validation-Report-v4.md  Validation-Report-v5.md  Validation-Report-v6.md  Validation-Report-v7.md  VideoNotesAI-Final-Architecture-v3.md
docs/reviews/: agent-baseline-report.md
docs/task-reports/: VN-AVIDEO-001.md  VN-AVIDEO-002.md  VN-AVIDEO-003.md  VN-BUG-012.md  VN-BUG-013.md  VN-BUG-014.md  VN-BUG-015.md  VN-GOV-002.md  VN-IMPL-001.md  VN-IMPL-003.md  VN-LDRFT-001.md  VN-LIBFM-001.md  VN-SEC-002.md
plugins/example/: plugin.py
requirements/: base.txt  build.txt  cuda.txt  dev.txt  gui.txt  ocr-cpu.txt  ocr-gpu.txt  ocr.txt  sidecar.txt  transcription-cpu.txt  vision.txt
runtime/manifests/: base-engine.json  download-tools.json  ffmpeg-tools.json  ocr-cpu.json  ocr-gpu.json  tesseract-ocr-tools.json  transcription-cpu.json  transcription-cuda.json  whisper-cpp-cuda-tools.json  whisper-cpp-tools.json
scripts/: batch_process_unreal_videos.py  build_runtime_component_package.py  build_runtime_component_release.py  build_windows_release.ps1  check_repository_hygiene.py  compute_sidecar_fingerprint.py  conformance_report.py  create_source_archive.py  create_windows_release_candidate.py  diagnose_desktop.ps1  generate_component_release_keys.py  generate_gate0_artifacts.py  generate_gate4_corpus.py  prepare_runtime_payload_sources.ps1  prepare_tauri_sidecar.ps1  process_unreal_annotations.py  stage_runtime_payloads.py  subtitle_to_annotation.py  verify_clean_vm_runtime.ps1  verify_cross_language_interop.py  verify_installed_runtime.py  verify_product.ps1  verify_product.sh  verify_release_acceptance.py  verify_release_candidate.py  verify_release_gate.py  verify_runtime_payloads.py  verify_source_release.py
spec/: README.md  STATUS.yaml
src/: __init__.py  engine.py  vault_writer.py
src/api/: __init__.py  event_journal.py  server.py
src/app/: __init__.py  bootstrap.py
src/application/: __init__.py
src/config/: constants.py  provider_profiles.py  settings.py
src/db/: database.py  models.py
src/domain/: job_state.py  types.py
src/infrastructure/: __init__.py
src/utils/: __init__.py  app_version.py  external_tools.py  logging.py  runtime.py  runtime_components.py  subprocess_flags.py  subtitle_writer.py  system.py
tasks/: index.json
tasks/spec-v0.2/: vn-anthropic-video-001.json  vn-anthropic-video-002.json  vn-anthropic-video-003.json  vn-bug-012.json  vn-bug-013.json  vn-bug-014.json  vn-bug-015.json  vn-gov-002.json  vn-impl-001.json  vn-impl-002.json  vn-impl-003.json  vn-ldrft-001.json  vn-library-fm-001.json  vn-sec-001.json  vn-sec-002.json
templates/: default.md
tests/: BASELINE.md  __init__.py  conftest.py  test_api_collections_contract.py  test_api_notes_contract.py  test_api_runtime_contract.py  test_api_settings_contract.py  test_application_pipeline_stages.py  test_architecture_smoke.py  test_archive_policy.py  test_artifact_writer_frame_links.py  test_cli_collections_commands.py  test_collection_delete.py  test_component_downloader.py  test_component_manager.py  test_component_release_keygen.py  test_component_signing.py  test_conftest_optional_deps.py  test_core_compat_imports.py  test_db_collection_repo.py  test_db_gateway.py  test_db_job_repo.py  test_db_note_repo.py  test_db_provenance_repo.py  test_desktop_settings_persistence.py  test_engine_api_smoke.py  test_engine_sidecar_boot.py  test_frame_extractor.py  test_frame_quality.py  test_gate0_artifacts.py  test_image_processor.py  test_installed_runtime_verifier.py  test_job_queue.py  test_llm_provider.py  test_note_generation_performance.py  test_ocr.py  test_ocr_gateway_backend_selection.py  test_pipeline_io_stages.py  test_pipeline_orchestrator_e2e.py  test_pipeline_side_effect_stages.py  (+43 more)
tests/helpers/: markers.py
(+406 files in other folders)
