[package]
name = "video-notes-ai"
version = "1.6.2"
edition = "2021"
description = "Video Notes AI — AI-powered video transcription and note generation"
authors = ["Video Notes AI Team"]
license = "MIT"

[package.metadata]
"software.repository" = "https://github.com/example/video-notes-ai"

[package.metadata.tauri-winres]
"OriginalFilename" = "Video Notes AI.exe"
"ProductName" = "Video Notes AI"
"FileVersion" = "1.6.2"
"ProductVersion" = "1.6.2"
"FileDescription" = "Video Notes AI"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol", "tauri/protocol-asset"]
